src/main/resources/com/redhat/waw/operator/hello/quarkus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ""
  labels:
    app: "" 
spec:
  selector:
    app: ""
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
