src/main/resources/com/redhat/waw/operator/hello/quarkus/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: 
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: 
              servicePort: 8080
