src/main/resources/com/redhat/waw/operator/hello/quarkus/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
   name: ""
   labels:
     app: ""
spec:
  host: ""
  to:
    kind: Service
    name: ""
    weight: 100
  port:
    targetPort: 8080
